edits to 5.3 (on Grassmannians and related varieties as suggested by Rob

--- a/preamble.sty
+++ b/preamble.sty
@@ -110,8 +110,10 @@
 \DeclareMathOperator{\EXT}{Ext}
 
 % image
-\DeclareMathOperator{\IM}{im}%image
+\DeclareMathOperator{\IM}{im}
 
+% rank of a linear map
+\DeclareMathOperator{\rank}{rank}
 
 % --------------------------------------------- %
 % 				NOTATION					 	  %
